# gencore

./: .gitignore  .gitmodules  CMakeLists.txt  actor.cpp  actor.h  concept.h  global.h  globals.h  interface.h  main.cpp  plane.cpp  plane.h  render.cpp  render.h  state.cpp  state.h  texture.cpp  texture.h
